// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestFormFieldBuilderContainer Doesn't fail on empty metadata 1`] = `
<DocumentFragment>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
      content="No Request Body for LivenessCheckAction /_liveness"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        No Request Body for LivenessCheckAction /_liveness
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders single body input 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0px !important;
}

.emotion-0 {
  white-space: pre-line !important;
}

<div
    class="bp3-form-group emotion-1"
  >
    <label
      class="bp3-label"
    >
      <span />
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-control-group"
      >
        <textarea
          class="bp3-input bp3-fill emotion-0"
          placeholder="Unparseable type. This input will return a string or JSON."
          style="height: 0px;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form int field 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0px !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

.emotion-7 {
  box-shadow: none !important;
  border-left: 2px black;
  margin-bottom: 0px;
  padding: 0px 0px 0px 15px !important;
}

.emotion-3 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-4 {
  line-height: normal;
  text-transform: inherit;
}

<div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 01.71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 011.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 emotion-7"
    >
      <div>
        <div
          class="bp3-form-group emotion-6"
        >
          <label
            class="bp3-label"
          >
            <span
              class="emotion-2"
            >
              Int Field (Int)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-4"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Int"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form multiple top level fields 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0px !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

.emotion-22 {
  box-shadow: none !important;
  border-left: 2px black;
  margin-bottom: 0px;
  padding: 0px 0px 0px 15px !important;
}

.emotion-3 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-4 {
  line-height: normal;
  text-transform: inherit;
}

<div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 01.71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 011.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 emotion-22"
    >
      <div>
        <div
          class="bp3-form-group emotion-6"
        >
          <label
            class="bp3-label"
          >
            <span
              class="emotion-2"
            >
              Field 1 (Short)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-4"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Short"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group emotion-6"
        >
          <label
            class="bp3-label"
          >
            <span
              class="emotion-2"
            >
              Field 2 (Int)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-4"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Int"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group emotion-6"
        >
          <label
            class="bp3-label"
          >
            <span
              class="emotion-2"
            >
              Field 3 (Long)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-4"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Long"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group emotion-6"
        >
          <label
            class="bp3-label"
          >
            <span
              class="emotion-2"
            >
              Field 4 (Short)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-4"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Short"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form nested int field 1`] = `
<DocumentFragment>
  .emotion-6 {
  margin: 0px !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

.emotion-7 {
  box-shadow: none !important;
  border-left: 2px black;
  margin-bottom: 0px;
  padding: 0px 0px 0px 15px !important;
}

.emotion-3 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-4 {
  line-height: normal;
  text-transform: inherit;
}

<div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 01.71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 011.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 emotion-7"
    >
      <div>
        <div
          class="bp3-card bp3-elevation-0 emotion-7"
        >
          <div>
            <div
              class="bp3-form-group emotion-6"
            >
              <label
                class="bp3-label"
              >
                <span
                  class="emotion-2"
                >
                  Int Field (Int)
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-control-group"
                >
                  <span
                    class="bp3-popover-wrapper emotion-3"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-add-to-artifact"
                          icon="add-to-artifact"
                        >
                          <svg
                            data-icon="add-to-artifact"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              add-to-artifact
                            </desc>
                            <path
                              d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <span
                    class="bp3-popover-wrapper emotion-3"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button  emotion-4"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-more"
                          icon="more"
                        >
                          <svg
                            data-icon="more"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              more
                            </desc>
                            <path
                              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      placeholder="Int"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated nested int field 1`] = `
<DocumentFragment>
  .emotion-16 {
  margin: 0px !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

.emotion-17 {
  box-shadow: none !important;
  border-left: 2px black;
  margin-bottom: 0px;
  padding: 0px 0px 0px 15px !important;
}

.emotion-3 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-6 {
  line-height: normal;
  text-transform: inherit;
}

<div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 01.71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 011.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 emotion-17"
    >
      <div>
        <label
          class="bp3-label"
        >
          <span
            class="emotion-2"
          >
            Repeated Nested Int Field (nestedNoRepeatedInt)
          </span>
        </label>
        <div
          class="bp3-button-group"
        >
          <span
            class="bp3-popover-wrapper emotion-3"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-add-to-artifact"
                  icon="add-to-artifact"
                >
                  <svg
                    data-icon="add-to-artifact"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      add-to-artifact
                    </desc>
                    <path
                      d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="bp3-card bp3-elevation-0 emotion-17"
        >
          <div>
            <label
              class="bp3-label"
            >
              <span
                class="emotion-2"
              >
                Repeated Nested Int Field (nestedNoRepeatedInt)
              </span>
            </label>
            <div
              class="bp3-button-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-6"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-6"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="bp3-card bp3-elevation-0 emotion-17"
            >
              <div>
                <label
                  class="bp3-label"
                >
                  <span
                    class="emotion-2"
                  >
                    Nested Int Field (noRepeatedInt)
                  </span>
                </label>
                <div
                  class="bp3-button-group"
                >
                  <span
                    class="bp3-popover-wrapper emotion-3"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-add-to-artifact"
                          icon="add-to-artifact"
                        >
                          <svg
                            data-icon="add-to-artifact"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              add-to-artifact
                            </desc>
                            <path
                              d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-card bp3-elevation-0 emotion-17"
                >
                  <div>
                    <div
                      class="bp3-form-group emotion-16"
                    >
                      <label
                        class="bp3-label"
                      >
                        <span
                          class="emotion-2"
                        >
                          Int Field (Int)
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-control-group"
                        >
                          <span
                            class="bp3-popover-wrapper emotion-3"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="bp3-button"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-add-to-artifact"
                                  icon="add-to-artifact"
                                >
                                  <svg
                                    data-icon="add-to-artifact"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      add-to-artifact
                                    </desc>
                                    <path
                                      d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                          <span
                            class="bp3-popover-wrapper emotion-3"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="bp3-button  emotion-6"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-more"
                                  icon="more"
                                >
                                  <svg
                                    data-icon="more"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      more
                                    </desc>
                                    <path
                                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              class="bp3-input"
                              placeholder="Int"
                              style="padding-right: 10px;"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated nested repeated short field 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0px !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

.emotion-19 {
  box-shadow: none !important;
  border-left: 2px black;
  margin-bottom: 0px;
  padding: 0px 0px 0px 15px !important;
}

.emotion-3 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-6 {
  line-height: normal;
  text-transform: inherit;
}

<div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 01.71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 011.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 emotion-19"
    >
      <div>
        <label
          class="bp3-label"
        >
          <span
            class="emotion-2"
          >
            Nested Repeated Short Field (nestedRepeatedShort)
          </span>
        </label>
        <div
          class="bp3-button-group"
        >
          <span
            class="bp3-popover-wrapper emotion-3"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-add-to-artifact"
                  icon="add-to-artifact"
                >
                  <svg
                    data-icon="add-to-artifact"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      add-to-artifact
                    </desc>
                    <path
                      d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="bp3-card bp3-elevation-0 emotion-19"
        >
          <div>
            <label
              class="bp3-label"
            >
              <span
                class="emotion-2"
              >
                Nested Repeated Short Field (nestedRepeatedShort)
              </span>
            </label>
            <div
              class="bp3-button-group"
            >
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-6"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper emotion-3"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button  emotion-6"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="bp3-card bp3-elevation-0 emotion-19"
            >
              <div>
                <label
                  class="bp3-label"
                >
                  <span
                    class="emotion-2"
                  >
                    Nested Short Field (repeatedShort)
                  </span>
                </label>
                <div
                  class="bp3-button-group"
                >
                  <span
                    class="bp3-popover-wrapper emotion-3"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-add-to-artifact"
                          icon="add-to-artifact"
                        >
                          <svg
                            data-icon="add-to-artifact"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              add-to-artifact
                            </desc>
                            <path
                              d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-card bp3-elevation-0 emotion-19"
                >
                  <div>
                    <div>
                      <div
                        class="bp3-form-group emotion-18"
                      >
                        <label
                          class="bp3-label"
                        >
                          <span
                            class="emotion-2"
                          >
                            Repeated Short Field (Short)
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-control-group"
                          >
                            <span
                              class="bp3-popover-wrapper emotion-3"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="bp3-button"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-add-to-artifact"
                                    icon="add-to-artifact"
                                  >
                                    <svg
                                      data-icon="add-to-artifact"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        add-to-artifact
                                      </desc>
                                      <path
                                        d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                            <span
                              class="bp3-popover-wrapper emotion-3"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="bp3-button  emotion-6"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-more"
                                    icon="more"
                                  >
                                    <svg
                                      data-icon="more"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        more
                                      </desc>
                                      <path
                                        d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                            <span
                              class="bp3-popover-wrapper emotion-3"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="bp3-button  emotion-6"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-plus"
                                    icon="plus"
                                  >
                                    <svg
                                      data-icon="plus"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        plus
                                      </desc>
                                      <path
                                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                class="bp3-input"
                                placeholder="Short"
                                style="padding-right: 10px;"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated short field 1`] = `
<DocumentFragment>
  .emotion-8 {
  margin: 0px !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

.emotion-9 {
  box-shadow: none !important;
  border-left: 2px black;
  margin-bottom: 0px;
  padding: 0px 0px 0px 15px !important;
}

.emotion-3 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-4 {
  line-height: normal;
  text-transform: inherit;
}

<div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 01.71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 011.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button emotion-0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 emotion-9"
    >
      <div>
        <div>
          <div
            class="bp3-form-group emotion-8"
          >
            <label
              class="bp3-label"
            >
              <span
                class="emotion-2"
              >
                Repeated Short Field (Short)
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-control-group"
              >
                <span
                  class="bp3-popover-wrapper emotion-3"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-add-to-artifact"
                        icon="add-to-artifact"
                      >
                        <svg
                          data-icon="add-to-artifact"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            add-to-artifact
                          </desc>
                          <path
                            d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class="bp3-popover-wrapper emotion-3"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button  emotion-4"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class="bp3-popover-wrapper emotion-3"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button  emotion-4"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-plus"
                        icon="plus"
                      >
                        <svg
                          data-icon="plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            plus
                          </desc>
                          <path
                            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    placeholder="Short"
                    style="padding-right: 10px;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
